# newron

./: .gitignore  :tabnew src  <  Cargo.toml  README.md
.github/workflows/: rust.yml
datasets/: init.sh
examples/: linear_regression.rs  mnist.rs  perceptron.py  perceptron.rs  simple.rs  tensor.rs  titanic.rs  wine_quality.rs
src/: activation.rs  confusion_matrix.rs  dataset.rs  layer.rs  lib.rs  metrics.rs  random.rs  sequential.rs  tensor.rs  utils.rs
src/layers/: dense.rs  dropout.rs  layer.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/loss/: categorical_entropy.rs  loss.rs  mod.rs  mse.rs
src/metrics/: accuracy.rs  confusion_matrix.rs  mod.rs
src/optimizers/: mod.rs  optimizer.rs  sgd.rs
tests/: accuracy.rs  categorical_entropy.rs  dataset.rs  dense.rs  metrics.rs  mse.rs  newton.rs  relu.rs  sequential.rs  sigmoid.rs  softmax.rs  tanh.rs  tensor.rs  test_activation.rs
