[package]
name = "newron"
version = "0.1.0"
authors = ["Hugues Gaillard <hugues.gaillard@me.com>"]
edition = "2018"
keywords = [ "neural", "network", "deep", "learning", "data science" ]
description = """
A Rust library to train and infer deep learning models.
"""
readme = "README.md"

[dependencies]
nalgebra = "0.20"

[[example]]
name = "simple"
path = "examples/simple.rs"