[package]
name = "newron"
version = "0.1.1"
authors = ["Hugues Gaillard <hugues.gaillard@me.com>"]
edition = "2018"
keywords = [ "neural", "network", "deep", "learning" ]
description = """
A Rust library to train and infer deep learning models.
"""
readme = "README.md"
homepage = "https://github.com/hugues31/newron"
repository = "https://github.com/hugues31/newron"
documentation = "https://docs.rs/newron/"
license = "MIT"

[[example]]
name = "perceptron"
path = "examples/perceptron.rs"
